<resources>
    <string name="app_name">Safe House</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Accder a la camara es necesario</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="descrImgLogin">Image Login</string>
    <string name="hintPassword">Password</string>
    <string name="hintUserName">Enter Name</string>
    <string name="login">Login</string>
    <string name="descriptionImageNav">Image Nav</string>
    <string name="titleNav">Menu Safe House</string>
    <string name="logout">Logout</string>
    <string name="conocido">Familiares</string>
    <string name="registro">Registros</string>
    <string name="principal">Principal</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="am_start_app">Start</string>
</resources>
