<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item android:id="@+id/nav_item_main"
            android:icon="@drawable/home_icon"
            android:title="@string/principal" />
    </group>
    <group>
        <item android:id="@+id/nav_item_conocido"
            android:icon="@drawable/icon_user_2"
            android:title="@string/conocido" />
    </group>
    <group>
        <item android:id="@+id/nav_item_registro"
            android:icon="@drawable/photo"
            android:title="@string/registro" />
    </group>
    <group>
        <item android:id="@+id/nav_item_logout"
            android:icon="@drawable/baseline_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>